infra/pipeline/infra.yml
AWSTemplateFormatVersion: 2010-09-09
Description: A Java Spring web application deployed with Docker with CodeBuild/Deploy/Pipeline
Parameters:
  ProjectName:
    Type: String
  ProjectVersion:
    Type: String
  ContainerPort:
    Type: String
    Default: 8080
  AlbPort:
    Type: String
    Default: 80

Resources:

  ##########################
  # Network
  ##########################

  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.3.0/24
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      MapPublicIpOnLaunch: false

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.4.0/24
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      MapPublicIpOnLaunch: false

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/24
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      MapPublicIpOnLaunch: false

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.1.0/24
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      MapPublicIpOnLaunch: false

  ## INTERNET GATEWAY
  InternetGateway:
    Type: AWS::EC2::InternetGateway

  GatewayToInternet:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  ## PUBLIC ROUTING
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: GatewayToInternet
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

  ## NAT GATEWAY
  NatGateway:
    Type: AWS::EC2::NatGateway
    DependsOn: NatPublicIP
    Properties:
      SubnetId: !Ref PublicSubnet1
      AllocationId: !GetAtt NatPublicIP.AllocationId

  ## ELASTIC IP
  NatPublicIP:
    Type: AWS::EC2::EIP
    DependsOn: VPC
    Properties:
      Domain: vpc

  ## PRIVATE ROUTING
  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      NatGatewayId: !Ref NatGateway
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable

  ##########################
  # ALB
  ##########################

  ALBSecurityGroup:
    Properties:
      GroupDescription: allow access to ALB from internet
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: !Ref AlbPort
          ToPort: !Ref AlbPort
          CidrIp: 0.0.0.0/0
    Type: AWS::EC2::SecurityGroup

  ApplicationLoadBalancer:
    Properties:
      Scheme: internet-facing
      LoadBalancerAttributes:
        - Key: idle_timeout.timeout_seconds
          Value: '30'
      Subnets: [!Ref PublicSubnet1, !Ref PublicSubnet2] # Should be always public
      SecurityGroups:
        - !Ref ALBSecurityGroup
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer

  ALBListener:
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref ALBTargetGroup1
      LoadBalancerArn:
        Ref: ApplicationLoadBalancer
      Port: !Ref AlbPort
      Protocol: HTTP
    Type: AWS::ElasticLoadBalancingV2::Listener

  ALBTargetGroup1:
    Properties:
      HealthCheckIntervalSeconds: 30
      UnhealthyThresholdCount: 2
      HealthyThresholdCount: 2
      HealthCheckPath: /actuator/health
      Port: !Ref ContainerPort
      Protocol: HTTP
      VpcId: !Ref VPC
      TargetType: ip # required for ECS Fargate mode
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: 5
    DependsOn: ApplicationLoadBalancer
    Type: AWS::ElasticLoadBalancingV2::TargetGroup

  ALBTargetGroup2:
    Properties:
      HealthCheckIntervalSeconds: 30
      UnhealthyThresholdCount: 2
      HealthyThresholdCount: 2
      HealthCheckPath: /actuator/health
      Port: !Ref ContainerPort
      Protocol: HTTP
      VpcId: !Ref VPC
      TargetType: ip # required for ECS Fargate mode
    DependsOn: ApplicationLoadBalancer
    Type: AWS::ElasticLoadBalancingV2::TargetGroup

  ##########################
  # ECS
  ##########################

  ECSTaskExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service: [ ecs-tasks.amazonaws.com ]
            Action: [ 'sts:AssumeRole' ]
      Path: /
      Policies:
        - PolicyName: AmazonECSTaskExecutionRolePolicy
          PolicyDocument:
            Statement:
              - Effect: Allow
                Action:
                  # Allow the ECS Tasks to download images from ECR
                  - 'ecr:GetAuthorizationToken'
                  - 'ecr:BatchCheckLayerAvailability'
                  - 'ecr:GetDownloadUrlForLayer'
                  - 'ecr:BatchGetImage'

                  # Allow the ECS tasks to upload logs to CloudWatch
                  - 'logs:CreateLogStream'
                  - 'logs:PutLogEvents'
                Resource: '*'

  EcsFargateSecurityGroup:
    Properties:
      GroupDescription: allow access to ECS from ALB
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: !Ref ContainerPort
          ToPort: !Ref ContainerPort
          SourceSecurityGroupId: !Ref ALBSecurityGroup
    Type: AWS::EC2::SecurityGroup

  EcsFargateLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub /ecs/fargate/${ProjectName}

  EcsFargateTaskDefinition:
    Description: ECS Task Definition
    Properties:
      NetworkMode: awsvpc
      Family: !Ref ProjectName
      Cpu: 512
      Memory: 1024
      ExecutionRoleArn: !Ref ECSTaskExecutionRole # Fargate requires task definition to have execution role ARN to support ECR images
      TaskRoleArn: !Ref ECSTaskExecutionRole
      RequiresCompatibilities:
        - FARGATE
      ContainerDefinitions:
        - Name: !Ref ProjectName
          Image: !Sub '467420073914.dkr.ecr.eu-west-1.amazonaws.com/${ProjectName}:latest'
          Environment:
            - Name: SERVER_PORT
              Value: !Ref ContainerPort
            - Name: DEPLOYMENT_DATE
              Value: !Ref ProjectVersion
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-region: !Ref AWS::Region
              awslogs-group: !Ref EcsFargateLogGroup
              awslogs-stream-prefix: oam-ecs
          PortMappings:
            - ContainerPort: !Ref 'ContainerPort'
    Type: AWS::ECS::TaskDefinition

  EcsFargateCluster:
    Description: ECS Cluster
    Properties:
      ClusterName: !Ref 'ProjectName'
    Type: AWS::ECS::Cluster

  EcsFargateService:
    Description: ECS Service
    Properties:
      Cluster: !Ref 'EcsFargateCluster'
      LaunchType: FARGATE
      LoadBalancers:
        - TargetGroupArn: !Ref ALBTargetGroup1 # loadBalancerName and targetGroupArn cannot both be specified. You must specify either a loadBalancerName or a targetGroupArn.
          #LoadBalancerName: !Ref 'LoadBalancerName'
          ContainerPort: !Ref 'ContainerPort'
          ContainerName: !Ref 'ProjectName'
      NetworkConfiguration:
        AwsvpcConfiguration:
          #AssignPublicIp: ENABLED # unless a NAT / Route needs to be opened to ECR
          SecurityGroups:
            - !Ref 'EcsFargateSecurityGroup'
          Subnets: [ !Ref PrivateSubnet1, !Ref PrivateSubnet2 ]
      TaskDefinition: !Ref 'EcsFargateTaskDefinition'
    DependsOn: ALBListener # unless "The target group does not have an associated load balancer"
    Type: AWS::ECS::Service

  ###############
  # VPC Endpoints
  ###############

  VPCEndpointSecurityGroup:
    Description: Security Group to allow use of VPC Endpoints. https://docs.aws.amazon.com/AmazonECR/latest/userguide/vpc-endpoints.html
    Properties:
      VpcId: !Ref VPC
      GroupDescription: "Security group to allow use of VPC Endpoints."
      SecurityGroupIngress:
        - IpProtocol: tcp
          Description: HTTPS
          FromPort: 443
          ToPort: 443
          CidrIp: 10.0.0.0/0
    Type: AWS::EC2::SecurityGroup

  EcrPrivateVPCEndpoint1:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub com.amazonaws.${AWS::Region}.ecr.dkr
      PrivateDnsEnabled: True
      SecurityGroupIds:
        - !Ref VPCEndpointSecurityGroup
      SubnetIds: [!Ref PrivateSubnet1, !Ref PrivateSubnet2]
      VpcEndpointType: Interface
      VpcId: !Ref VPC

  EcrPrivateVPCEndpoint2:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      ServiceName: !Sub com.amazonaws.${AWS::Region}.ecr.api
      PrivateDnsEnabled: True
      SecurityGroupIds:
        - !Ref VPCEndpointSecurityGroup
      SubnetIds: [!Ref PrivateSubnet1, !Ref PrivateSubnet2]
      VpcEndpointType: Interface
      VpcId: !Ref VPC

  # Enables CloudWatch logging.
  LogsVPCEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      SubnetIds: [!Ref PrivateSubnet1, !Ref PrivateSubnet2]
      ServiceName: !Sub com.amazonaws.${AWS::Region}.logs
      VpcId: !Ref VPC
      SecurityGroupIds:
        - !Ref VPCEndpointSecurityGroup
Outputs:
  LoadBalancerName:
    Value: !GetAtt 'ApplicationLoadBalancer.LoadBalancerName'
  TargetGroupArn:
    Value: !Ref ALBTargetGroup1
  TargetGroupName:
    Value: !GetAtt 'ALBTargetGroup1.TargetGroupName'
  EcsFargateTaskDefinition:
    Value: !Ref 'EcsFargateTaskDefinition'
  ClusterName:
    Value: !Ref 'EcsFargateCluster'
  ServiceName:
    Value: !GetAtt 'EcsFargateService.Name'
